Remove collections-query and surplus libs, update JNA